--- a/spider-web/pom.xml
+++ b/spider-web/pom.xml
@@ -17,6 +17,11 @@
 		<version>1.0</version>
 	</parent>
 
+	<properties>
+		<thymeleaf.version>3.0.2.RELEASE</thymeleaf.version>
+		<thymeleaf-layout-dialect.version>2.1.1</thymeleaf-layout-dialect.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -31,6 +36,11 @@
 			<groupId>com.youe.yc</groupId>
 			<artifactId>spider-client</artifactId>
 			<version>1.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 
 		<dependency>
